<resources>

    <!--MAIN-->
    <string name="app_name">Stop The Bomb</string>
    <string name="playButton">Jugar</string>
    <string name="conf">Configuración</string>
    <string name="finales">Finales</string>
    <string name="atras">Atrás</string>

    <!--CONF-->
    <string name="sound">Sonido on/off</string>
    <string name="vibration">Vibración on/off</string>
    <string name="language">Idioma</string>
    <string name="save">Guardar ajustes</string>
    <string name="back">Atrás</string>
    <string name="settings_saved">¡Ajustes guardados!</string>
    <string name="sum_idioma">Selecciona el idioma de la app</string>
    <string name="sum_sonido">Activa el sonido</string>
    <string name="sum_vibra">Activa la vibración</string>

    <!-- Array de idiomas -->
    <string-array name="languages_array">
        <item>Inglés</item>
        <item>Euskera</item>
        <item>Castellano</item>
    </string-array>

    <!-- Array de idiomas -->
    <string-array name="languages_values">
        <item>en</item>
        <item>eu</item>
        <item>es</item>
    </string-array>

    <!--TUT-->
    <string name="como_jugar">Cómo Jugar:</string>
    <string name="tut1">1964. Guerra Fría. </string>
    <string name="tut2">Te encuentras en un avión de la escuadra nuclear de combate del general de la fuerza aérea de los estados unidos. </string>
    <string name="tut3">El piloto del avión te pide que vigiles los controles durante unos minutos con órdenes muy específicas.</string>
    <string name="tut4">Tanto si obedeces como si no, tus acciones tendrán consecuencias.</string>

    <!-- LOGROS -->
    <string name="progress_title">Progreso</string>
    <string name="score_format">hola</string>

    <!-- ID -->
    <string name="id_label">ID:</string>
    <string name="nationality_label">Nacionalidad:</string>
    <string name="name_label">Nombre:</string>
    <string name="lastname_label">Apellido:</string>
    <string name="birthday_label">Fecha de nacimiento:</string>
    <string name="warning" >Advertencia</string>
    <string name="progress_lost">Se perderá todo el progreso</string>
    <string name="confirm">Confirmar</string>
    <string name="no">No</string>
    <string name="talkative">La tabarra que me estás dando, virgen santísima</string>
    <string name="nod">Asentir</string>
    <string name="tennant">Teniente Rogers</string>
    <string name="bye">Adiós</string>
    <string name="ending_discovered">Final descubierto</string>
    <string name="obedient">Obediente</string>
    <string name="onemore">Está atascada...</string>
    <string name="cowboy">Encuentras un sombre de cowboy, ¿lo coges?</string>
    <string name="yes">Sí</string>
    <string name="accept">Aceptar</string>
    <string name="radio_synth">Radio sintonizada</string>
    <string name="codes">Códigos</string>
    <string name="transmissions">Transmisiones</string>
    <string name="correct_freq">¡Frecuencia correcta!</string>
    <string name="all_units">A todas las unidades</string>
    <string name="validatePlanR">El Plan R ha sido validado. Desbloquear:</string>
    <string name="send">Enviar</string>
    <string name="hidden_name">Introduce el nombre oculto:</string>
    <string name="incorrect_name">Nombre incorrecto, inténtalo de nuevo</string>
    <string name="cancel">Cancelar</string>
    <string name="enhorabuena_end">Veo que me ha obedecido a la perfección, cadete. Enhorabuena. Llegará muy lejos.</string>
    <string name="unlocked_date">Desbloqueado: %s</string>
    <string name="no_unlocked">Este logro no ha sido desbloqueado.</string>
    <string name="comments">Comentarios</string>
    <string name="achievements">Logros</string>
    <string name="code_panel">Códigos</string>
    <string name="jump">JUMP</string>
    <string name="number_panel">Panel números</string>
    <string name="radar">Radar</string>
    <string name="radio">Radio</string>
    <string name="drawer">Cajón</string>
    <string name="write_comm">Escribe un comentario...</string>
    <string name="add_comment">Añade el comentario</string>
    <string name="discovered">Descubierto</string>
    <string name="plans">Planes</string>
    <string name="id_card">Tarjeta de identificación</string>
    <string name="open_loc">Abrir localización</string>
    <string name="intro_dest">Introduce una dirección</string>
    <string name="establish_dest">Establecer destino</string>
    <string name="ending_not">Este final aún no ha sido descubierto</string>

</resources>