<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="8dp"
        android:padding="24dp"
        android:background="@color/background"
        android:layout_margin="32dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/btnIdCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_card" />


        <Button
            android:id="@+id/btnPlans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plans"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_gravity="end"
            android:layout_margin="16dp" />


    </LinearLayout>
</LinearLayout>



